# chat

./: .gitignore  Makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/logic/: __init__.py  mediator.py
app/logic/commands/: messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
docker_compose/: app.yaml
tests/: conftest.py
tests/domain/values/: test_messages.py
tests/logic/: test_messages.py
